import React from 'react';
import Avatar from '../Avatar';
import { render, waitFor, configure } from '@testing-library/react';
import { axe, toHaveNoViolations } from 'jest-axe';

expect.extend(toHaveNoViolations);
configure({ testIdAttribute: 'data-test-id' });
const testId = 'foundry-avatar';

describe('Avatar', () => {
  it('matches snapshot', async () => {
    const { container } = render(<Avatar />);
    await waitFor(() => {
      expect(container).toMatchSnapshot();
    });
  });
  it('matches snapshot Loading State', async () => {
    const { container } = render(<Avatar isLoading size={64} data-test-id={testId} />);
    await waitFor(() => {
      expect(container).toMatchSnapshot();
    });
  });

  it('avatar displays correct initials when their is no image', async () => {
    const { container } = render(<Avatar placeholder="SA" size={64} data-testid={testId} />);

    await waitFor(() => {
      expect(container).toMatchSnapshot();
    });
  });

  it('avatar displays correct image when their is an image', async () => {
    const { container } = render(
      <Avatar imgURL="https://tinyurl.com/49dba3d4" size={64} data-testid={testId} />,
    );
    await waitFor(() => {
      expect(container).toMatchSnapshot();
    });
  });

  it('avatar size is correct', async () => {
    const { container } = render(<Avatar size={21} data-test-id={testId} />);
    await waitFor(() => {
      expect(container).toMatchSnapshot();
    });
  });

  it('avatar shape is correct', async () => {
    const { container } = render(<Avatar borderRadiusPercent={30} data-test-id={testId} />);
    await waitFor(() => {
      expect(container).toMatchSnapshot();
    });
  });

  describe('Accessibility Tests', () => {
    it('Should pass accessibility test with default props', async () => {
      const component = <Avatar></Avatar>;
      const { container } = render(component);
      const results = await axe(container);
      expect(results).toHaveNoViolations();
    });
  });

  describe('Ref Tests', () => {
    it('avatarText.current should exist', async () => {
      const ref = React.createRef<HTMLSpanElement>();
      const { getByTestId } = render(
        <Avatar avatarTextRef={ref} avatarTextProps={{ 'data-test-id': testId }} />,
      );
      await waitFor(() => {
        expect(ref.current instanceof HTMLSpanElement).toBeTruthy();
      });
    });
  });
});
